--- a/style.css
+++ b/style.css
@@ -121,13 +121,20 @@ side{
     position: relative;
 }
 
+#picture1{
+    position: relative;
+    top: 0px;
+    left: 100px; 
+}
+#picture3{
+    position: relative;
+    top: 0px;
+    left: 100px; 
+}
 img{
     width: 100%;
 }
 
-.picture>h1{
-    display: none;
-}
 
 .picture:hover{
     position: relative;
@@ -137,7 +144,7 @@ img{
 
 
 
-.picture:hover>h1{
+.picture>h1:first-of-type{
     display: block;
     position: absolute;
     top: 50px;
