--- a/plus.css
+++ b/plus.css
@@ -17,3 +17,18 @@
     border: 2px solid white;
 
 }
+
+#submenu>ul{
+    position: absolute;
+    left: 50px;
+    bottom: 20px;
+    display: none; 
+
+}
+
+
+#submenu:hover>ul{
+    display: block;
+    height: 100px;
+    width: 100px;
+}
